--- a/.github/workflows/139-222-ubuntu-gloss-block-target.yml
+++ b/.github/workflows/139-222-ubuntu-gloss-block-target.yml
@@ -1,7 +1,7 @@
 name: 139-222 Ubuntu gloss block target
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
