--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-222 Ubuntu gloss block target"
+            "139-224 Ubuntu manage gloss target"
           )
           
           # Total number of workflows we're monitoring
