--- a/.github/workflows/139-228-ubuntu-gloss-no-xtrace.yml
+++ b/.github/workflows/139-228-ubuntu-gloss-no-xtrace.yml
@@ -1,7 +1,7 @@
 name: 139-228 Ubuntu gloss no xtrace
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
