--- a/.github/workflows/139-231-ubuntu-function-presence.yml
+++ b/.github/workflows/139-231-ubuntu-function-presence.yml
@@ -1,7 +1,7 @@
 name: 139-231 Ubuntu function presence repro
 
 on:
-  pull_request:
+  workflow_dispatch:
 
 concurrency:
   group: ${{ github.workflow }}-${{ github.event.pull_request.number || github.ref }}
