--- a/.github/workflows/collect-failures.yml
+++ b/.github/workflows/collect-failures.yml
@@ -69,7 +69,7 @@ jobs:
 
           # Workflows to monitor
           workflows=(
-            "139-231 Ubuntu function presence repro"
+            "139-235 Ubuntu gloss single blocks"
           )
           
           # Total number of workflows we're monitoring
